--- a/src/main/resources/templates/admin/sales_status.html
+++ b/src/main/resources/templates/admin/sales_status.html
@@ -1,10 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+    <style>
+        main {
+            padding-top: 120px;
+        }
+
+        h2 {
+            padding-bottom: 20px;
+        }
+
+        .search_box {
+            width: 400px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 100px;
+            border: 1px solid black;
+            padding: 5px;
+        }
+
+        .search_box .col input {
+            margin-right: auto;
+            margin-left: auto;
+            margin-bottom: 15px;
+            width: 150px;
+            height: 40px;
+        }
+
+
+    </style>
 </head>
 <body>
+<header th:insert="~{template/header :: admin_mainbar}"></header>
 
+<main>
+    <div class="row">
+        <!--사이드 바-->
+        <div class="col-md-2 mb-3" th:insert="~{template/admin_sidebar ::admin_sidebar}">
+        </div>
+
+
+        <div class="col-md-6 mb-3">
+            <h2><b>판매 현황</b></h2>
+            <div class="search_box">
+                <form action="/admin/sales_status/search" method="post">
+                    <h3>Search</h3>
+                    <div class="col">
+                        <input type="date" name="start_date" id="start_date">
+                        <b>~</b>
+                        <input type="date" name="end_date" id="end_date">
+                    </div>
+                    <div class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                               name="search" id="search">
+                        <button class="btn btn-outline-success" id="search_btn"type="button">Search</button>
+                    </div>
+                </form>
+            </div>
+            <table class="table table-bordered" id="ajax_table"></table>
+
+        </div>
+    </div>
+</main>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+<script>
+    $('#search_btn').click(function () {
+        $.ajax({
+            url: "/admin_sales_status/search",
+            type: "post",
+            data: {'start_date': $('#start_date').val(), 'end_date': $('#end_date').val(), 'search': $('#search').val()}
+        })
+            .done(function (data) {
+                $('#ajax_table').replaceWith(data);
+            })
+    })
+
+
+
+</script>
 </html>
